--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "@adobe-mcid/visitor-js-server": "^2.1.0",
     "@adobe/target-nodejs-sdk": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
