add github links

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 # Adobe Target Configuration
 # Get these values from your Adobe Experience Cloud account
-ADOBE_TARGET_CLIENT=your-client-id
-ADOBE_TARGET_ORG_ID=your-org-id@AdobeOrg
+ADOBE_TARGET_CLIENT=
+ADOBE_TARGET_ORG_ID=
+ADOBE_TARGET_PROPERTY_TOKEN=
+ADOBE_LAUNCH_URL=
+
+# Adobe Analytics Configuration (for server-side A4T)
+ADOBE_ANALYTICS_TRACKING_SERVER=
+ADOBE_ANALYTICS_RSID=
 
 # Server Configuration
 PORT=3000
